# igloo

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  bind.rs  justfile  mise.toml
crates/igloo/src/: bindings.rs  lib.rs  plugin_manager.rs
crates/igloo/src/widgets/: button.rs  column.rs  float.rs  grid.rs  mod.rs  pick_list.rs
crates/igloo_guest/: Cargo.toml
crates/igloo_guest/src/: bindings.rs  element.rs  lib.rs
crates/igloo_guest/src/widgets/: checkbox.rs  column.rs  combo_box.rs  float.rs  keyed.rs  markdown.rs  mod.rs  pick_list.rs  scrollable.rs  slider.rs  space.rs  svg.rs  table.rs  text_input.rs  toggler.rs  tooltip.rs  utils.rs  vertical_slider.rs
crates/igloo_host/: Cargo.toml
crates/igloo_host/src/: plugin_manager.rs  utils.rs
crates/igloo_host/src/widgets/: combo_box.rs  container.rs  progress_bar.rs  scrollable.rs  svg.rs
crates/test_guest/src/: element.rs
crates/test_guest/src/utils/: mod.rs
crates/test_guest/src/widgets/: button.rs  checkbox.rs  container.rs  grid.rs  image.rs  mod.rs  pane_grid.rs  progress_bar.rs  radio.rs  row.rs  rule.rs  text.rs  toggler.rs
crates/test_host/src/widgets/: checkbox.rs  image.rs  keyed.rs  markdown.rs  pane_grid.rs  radio.rs  row.rs  rule.rs  slider.rs  space.rs  table.rs  text.rs  text_input.rs  toggler.rs  tooltip.rs  vertical_slider.rs
examples/rust_host/: Cargo.toml  rsx.just
examples/rust_host/guest/: Cargo.toml
examples/rust_host/guest/src/: lib.rs
examples/rust_host/src/: main.rs
plugins/js/: README.md  js.just  package.json
plugins/js/src/: index.ts
wit/: alignment.wit  button.wit  checkbox.wit  column.wit  combo-box.wit  container.wit  float.wit  grid.wit  image.wit  keyed.wit  length.wit  markdown.wit  message.wit  padding.wit  pane-grid.wit  pick-list.wit  progress-bar.wit  radio.wit  row.wit  rule.wit  scrollable.wit  shared.wit  slider.wit  space.wit  svg.wit  table.wit  text-editor.wit  text-input.wit  text.wit  toggler.wit  tooltip.wit  vertical-slider.wit  world.wit
